--- a/app/src/main/res/layout/activity_notes_list.xml
+++ b/app/src/main/res/layout/activity_notes_list.xml
@@ -41,6 +41,7 @@
         android:onClick="newNote"
         android:scaleType="center"
         android:src="@drawable/ic_note"
-        app:fabSize="normal" />
+        app:fabSize="normal"
+        android:contentDescription="TODO" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
