--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -10,8 +10,8 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Log in to Vožyk"
-        android:textSize="25dp"
+        android:text="@string/log_in_to_vo_yk"
+        android:textSize="25sp"
         android:textStyle="bold"
         android:textColor="#234E70"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -30,7 +30,7 @@
         android:layout_marginBottom="456dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:padding="10dp"
         android:textSize="14sp"
@@ -49,7 +49,7 @@
         android:layout_marginEnd="16dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="10dp"
         android:textSize="14sp"
@@ -59,19 +59,19 @@
         app:layout_constraintTop_toBottomOf="@+id/Email" />
 
 
-<!--    <ImageView-->
-<!--        android:id="@+id/show_hide_pwd"-->
-<!--        android:layout_width="282dp"-->
-<!--        android:layout_height="233dp"-->
-<!--        android:layout_below="@id/Email"-->
-<!--        android:layout_marginBottom="440dp"-->
-<!--        android:contentDescription="TODO"-->
-<!--        android:src="@drawable/vozyk_log"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.496"-->
-<!--        app:layout_constraintLeft_toRightOf="@+id/password"-->
-<!--        app:layout_constraintStart_toStartOf="parent" />-->
+    <ImageView
+        android:id="@+id/image_logo"
+        android:layout_width="106dp"
+        android:layout_height="91dp"
+        android:layout_below="@id/Email"
+        android:layout_marginBottom="512dp"
+        android:contentDescription="TODO"
+        android:src="@drawable/voz"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintLeft_toRightOf="@+id/password"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/loginBtn"
@@ -81,45 +81,47 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="16dp"
         android:backgroundTint="#A7BEAE"
-        android:text="login"
+        android:text="@string/login"
         android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password" />
-
-    <Button
-        android:id="@+id/btn_googleLogin"
-        android:layout_width="119dp"
-        android:layout_height="45dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="144dp"
-        android:backgroundTint="#B85042"
-        android:text="Google"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />
 
     <TextView
         android:id="@+id/createText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:text="create new account"
-        android:textSize="18dp"
+        android:text="@string/create_new_account"
+        android:textSize="18sp"
         android:textColor="#234E70"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginBtn" />
 
+
+    <ImageView
+        android:id="@+id/show_hide_pwd"
+        android:layout_width="36dp"
+        android:layout_height="29dp"
+        android:layout_below="@id/Email"
+        android:layout_marginBottom="396dp"
+        android:background="@drawable/hide_show"
+        android:contentDescription="TODO"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.853"
+        app:layout_constraintLeft_toRightOf="@+id/password"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/forgotPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:text="forgot password?"
-        android:textSize="15dp"
+        android:text="@string/forgot_password"
+        android:textSize="15sp"
         android:textColor="#234E70"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
