--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -17,7 +17,8 @@
             android:layout_height="69dp"
             android:layout_gravity="center_horizontal"
             android:clickable="false"
-            app:srcCompat="@drawable/voz" />
+            app:srcCompat="@drawable/voz"
+            android:contentDescription="TODO" />
 
         <TextView
             android:id="@+id/textView3"
@@ -25,7 +26,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/arima_madurai_extrabold"
             android:gravity="center_horizontal"
-            android:text="Profile"
+            android:text="@string/profile"
             android:textColor="#1A237E"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
@@ -50,27 +51,27 @@
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="100px" />
+                android:layout_height="100dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="100px"
+                android:layout_height="100dp"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/nameLabel"
                     android:layout_marginHorizontal="5dp"
-                    android:layout_width="400px"
+                    android:layout_width="400dp"
                     android:gravity="center_horizontal"
                     android:layout_height="wrap_content"
                     android:background="#BCFFFFFF"
-                    android:paddingLeft="15px"
-                    android:text="Name"
+                    android:paddingStart="15dp"
+                    android:text="@string/name"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
                 <TextView
                     android:id="@+id/firstname_textview"
-                    android:layout_width="700px"
+                    android:layout_width="700dp"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:background="#BCFFFFFF"
