--- a/app/src/main/res/layout/activity_adhd.xml
+++ b/app/src/main/res/layout/activity_adhd.xml
@@ -8,12 +8,10 @@
     android:layout_height="fill_parent"
     android:background="#E7E8D1">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:id="@+id/activity_phq9"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:paddingBottom="16dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
