--- a/app/src/main/res/layout/activity_adhd_result.xml
+++ b/app/src/main/res/layout/activity_adhd_result.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:src="@drawable/voz"
-        />
+        android:contentDescription="TODO" />
 
     <TextView
         android:id="@+id/results"
