--- a/app/src/main/res/layout/activity_doctor_add.xml
+++ b/app/src/main/res/layout/activity_doctor_add.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:background="@color/OrangeAeroSpace"
         android:fontFamily="@font/robotobold"
-        android:paddingLeft="10dp"
+        android:paddingStart="10dp"
         android:paddingTop="60dp"
         android:paddingBottom="10dp"
         android:text="Add Appointment"
@@ -70,7 +70,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/lab_date_view"
         app:layout_constraintEnd_toStartOf="@+id/lab_date_view"
         app:layout_constraintTop_toTopOf="@+id/lab_date_view"
-        app:srcCompat="@drawable/ic_calendar_svgrepo_com" />
+        app:srcCompat="@drawable/ic_calendar_svgrepo_com"
+        android:contentDescription="TODO" />
 
     <TextView
         android:id="@+id/lab_date_view"
@@ -94,7 +95,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/doctor_name"
         app:layout_constraintEnd_toStartOf="@+id/doctor_name"
         app:layout_constraintTop_toTopOf="@+id/doctor_name"
-        app:srcCompat="@drawable/ic_doctor_svgrepo_com__1_" />
+        app:srcCompat="@drawable/ic_doctor_svgrepo_com__1_"
+        android:contentDescription="TODO" />
 
     <ImageView
         android:id="@+id/imageView6"
@@ -104,7 +106,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/doctor_reason"
         app:layout_constraintEnd_toStartOf="@+id/doctor_reason"
         app:layout_constraintTop_toTopOf="@+id/doctor_reason"
-        app:srcCompat="@drawable/ic_prescription_svgrepo_com" />
+        app:srcCompat="@drawable/ic_prescription_svgrepo_com"
+        android:contentDescription="TODO" />
 
     <Button
         android:id="@+id/doctor_add_btn"
