--- a/app/src/main/res/layout/activity_meditate.xml
+++ b/app/src/main/res/layout/activity_meditate.xml
@@ -22,7 +22,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.255" />
+        app:layout_constraintVertical_bias="0.255"
+        android:importantForAutofill="no" />
 
     <Button
         android:id="@+id/button_set"
@@ -39,8 +40,7 @@
         app:layout_constraintLeft_toRightOf="@+id/edit_text_input"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.286"
-        android:layout_marginLeft="40dp" />
+        app:layout_constraintVertical_bias="0.286" />
 
     <TextView
         android:id="@+id/text_view_countdown"
