--- a/app/src/main/res/layout/activity_new_habit.xml
+++ b/app/src/main/res/layout/activity_new_habit.xml
@@ -21,7 +21,8 @@
             android:layout_height="60dp"
             android:layout_marginBottom="20dp"
             android:clickable="false"
-            app:srcCompat="@drawable/voz" />
+            app:srcCompat="@drawable/voz"
+            android:contentDescription="TODO" />
 
         <TextView
             android:layout_width="match_parent"
@@ -79,7 +80,8 @@
             app:layout_constraintBottom_toBottomOf="@id/linearLayout2"
             app:layout_constraintEnd_toEndOf="@id/linearLayout2"
             app:layout_constraintStart_toStartOf="@id/linearLayout2"
-            app:layout_constraintTop_toTopOf="@id/linearLayout2" />
+            app:layout_constraintTop_toTopOf="@id/linearLayout2"
+            android:importantForAutofill="no" />
 
         <TextView
             android:id="@+id/textView5"
@@ -115,7 +117,8 @@
             app:layout_constraintBottom_toBottomOf="@id/linearLayout2"
             app:layout_constraintEnd_toEndOf="@id/linearLayout2"
             app:layout_constraintStart_toStartOf="@id/linearLayout2"
-            app:layout_constraintTop_toTopOf="@id/linearLayout2" />
+            app:layout_constraintTop_toTopOf="@id/linearLayout2"
+            android:importantForAutofill="no" />
 
         <TextView
             android:id="@+id/textView6"
