--- a/app/src/main/res/layout/activity_time_change.xml
+++ b/app/src/main/res/layout/activity_time_change.xml
@@ -8,10 +8,10 @@
         android:id="@+id/textView8"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingLeft="2dp"
+        android:paddingStart="2dp"
         android:paddingTop="60dp"
         android:paddingBottom="10dp"
-        android:text="Update Times"
+        android:text="@string/update_times"
         android:textColor="@color/white"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
