--- a/app/src/main/res/layout/activity_to_do_list.xml
+++ b/app/src/main/res/layout/activity_to_do_list.xml
@@ -21,7 +21,8 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:clickable="false"
-            app:srcCompat="@drawable/voz"/>
+            app:srcCompat="@drawable/voz"
+            android:contentDescription="TODO" />
 
         <TextView
             android:layout_width="match_parent"
@@ -39,7 +40,7 @@
             android:layout_height="50dp"
             android:backgroundTint="#972196F3"
             android:text="+"
-            android:textSize="25dp"/>
+            android:textSize="25sp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -54,7 +55,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#9219D5F0"
-                android:text="My Completed Tasks">
+                android:text="My Completed Tasks"
+                style="?android:attr/buttonBarButtonStyle">
 
             </Button>
 
@@ -63,7 +65,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#5BCEDF"
-                android:text="My Pending Tasks">
+                android:text="My Pending Tasks"
+                style="?android:attr/buttonBarButtonStyle">
 
             </Button>
         </LinearLayout>
