--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -143,10 +143,10 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingLeft="2dp"
+        android:paddingStart="2dp"
         android:paddingTop="60dp"
         android:paddingBottom="10dp"
-        android:text="Update Medicine"
+        android:text="@string/update_medicine"
         android:textColor="@color/white"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
