--- a/app/src/main/res/layout/activity_update_medication.xml
+++ b/app/src/main/res/layout/activity_update_medication.xml
@@ -113,7 +113,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="23dp"
         android:text="Time to take Medication: "
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold" />
 
     <TextView
@@ -124,7 +124,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="-25dp"
         android:text="Date to take Medication: "
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold" />
 
 
