--- a/app/src/main/res/layout/custom_list_view.xml
+++ b/app/src/main/res/layout/custom_list_view.xml
@@ -56,7 +56,8 @@
         android:visibility="visible"
         android:background="@drawable/ic_baseline_edit_24"
         tools:layout_editor_absoluteX="312dp"
-        tools:layout_editor_absoluteY="56dp" />
+        tools:layout_editor_absoluteY="56dp"
+        android:contentDescription="TODO" />
 
     <ImageView
         android:id="@+id/delete_btn"
@@ -69,7 +70,8 @@
 
         android:background="@drawable/ic_baseline_delete_24"
         tools:layout_editor_absoluteX="254dp"
-        tools:layout_editor_absoluteY="56dp" />
+        tools:layout_editor_absoluteY="56dp"
+        android:contentDescription="TODO" />
 
 
     <TextView
