--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -31,7 +31,8 @@
             android:foregroundGravity="center"
             android:layout_marginTop="300dp"
             android:clickable="false"
-            app:srcCompat="@drawable/ic_medicine_svgrepo_com__1_" />
+            app:srcCompat="@drawable/ic_medicine_svgrepo_com__1_"
+            android:contentDescription="TODO" />
         <TextView
             android:id="@+id/emptyText"
             android:layout_width="match_parent"
@@ -91,7 +92,7 @@
             android:backgroundTint="#FFA000"
             app:srcCompat="@drawable/ic_baseline_add_24"
             app:layout_anchor="@id/bottomAppBar"
-            />
+            android:contentDescription="TODO" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
